Refatorado o código e mudado as estruturas dos arquivos